# FitNova-AI-Sales-Intelligence

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml  requirements-speech.txt  requirements.txt
config/: issue_rules.yaml  weights.yaml
dashboard/: Home.py
dashboard/components/: README.md  __init__.py  filters.py  issue_drilldown.py  kpi_cards.py  scorecards.py
dashboard/pages/: 1_Executive_Analytics.py  2_Advisor_Scorecards.py  3_Issue_Drilldown.py  4_Transcript_Evidence_Replay.py  5_Observability_Health.py  README.md
dashboard/static/: theme.css
dashboard/utils/: README.md  __init__.py  csv_export.py  data_access.py  pdf_export.py
data/audio/inbox/: README.md
data/processed/: README.md
docs/: 01_PHASE1_DESIGN.md  DEMO_VIDEO_SCRIPT.md  FINAL_PROJECT_REPORT.md  RELEASE_CHECKLIST.md  SETUP_LINUX.md  SETUP_WINDOWS.md
docs/architecture/: architecture.dot
docs/screenshots/: README.md
scripts/: README.md  capture_screenshots.py  demo.py  generate_demo_audio.py  render_dashboard_previews.py  seed_demo_data.py
src/fitnova/: __init__.py  bootstrap.py
src/fitnova/analysis/: __init__.py  confidence.py  evidence_validator.py  insight_generator.py  issue_detector.py  llm_client.py  llm_schemas.py  ollama_client.py  prompt_manager.py  scoring_engine.py  transcript_formatting.py
src/fitnova/api/: __init__.py  deps.py  main.py
src/fitnova/cli/: __init__.py  main.py
src/fitnova/core/: __init__.py  config.py  constants.py  container.py  logging_config.py
src/fitnova/db/: __init__.py  base.py  init_db.py  mixins.py  repository.py  session.py
src/fitnova/diarization/: __init__.py  base.py  fallback_engine.py  pyannote_engine.py
src/fitnova/ingestion/: __init__.py  base.py  crm_source.py  folder_source.py  registry.py
src/fitnova/pipeline/: __init__.py  benchmarking.py  (+3 more)
tests/: conftest.py  test_analysis_batch_end_to_end.py  test_api.py  test_audio_validation.py  test_benchmarking.py  test_call_classifier.py  test_cli.py  test_confidence.py  test_config.py  test_dashboard_smoke.py  test_db_models.py  test_demo_script.py  test_diarization_fallback.py  test_evidence_validator.py  test_ingestion.py  test_insight_generator.py  test_issue_detector.py  test_llm_client.py  test_normalizer.py  test_ollama_client.py  test_orchestrator_end_to_end.py  test_pii_redaction.py  test_prompt_manager.py  test_queue_manager.py  test_reporting.py  test_repository.py  test_scoring_engine.py  test_seed_demo_data.py  test_whisper_fallback.py
(+56 files in other folders)
